--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -62,9 +62,11 @@
 
         <div id="list_box">
             <div class="box_head"><i class="icon iconfont icon-memory">备忘录列表</i><i class="icon iconfont icon-close"></i></div>
-            <table border="1" cellpadding="0" cellspacing="0">
-                <tr><th class="list_no">序号</th><th class="notice_cnt">备忘内容</th><th class="at_time">添加时间</th><th class="notice_do">操作</th></tr>
-            </table>
+            <div style="overflow: hidden;overflow-y:scroll;height: 450px;width: 100%;">
+                <table border="1" cellpadding="0" cellspacing="0">
+                    <tr><th class="list_no">序号</th><th class="notice_cnt">备忘内容</th><th class="at_time">添加时间</th><th class="notice_do">操作</th></tr>
+                </table>
+            </div>
             <div class="notice_page">
                 <span class="num_row"></span>
             </div>
