update status to select

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -26,10 +26,11 @@
                 <span class="search_box"><strong>快速查找：</strong>
                     类别：<select name="search" style="width: 100px;">
                         <option value=""></option>
-                        <option value="main">域名查找</option>
-                        <option value="notice">备忘录信息查找</option>
-                        <option value="seo">SEO关键词查找</option>
-                        <option value="server">服务器信息查找</option>
+                        <option value="main_d">域名</option>
+                        <option value="main_n">网站名</option>
+                        <option value="notice">备忘录信息</option>
+                        <option value="seo">SEO关键词</option>
+                        <option value="server">服务器信息</option>
                     </select>&nbsp;
                     关键词：<input type="text" id="search_cnt" value="" placeholder="请输入查找关键信息" style="width: 120px;">
                     <a id="do_search" href="javascript:;">查 找</a>
